--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "rizal-web",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
+    "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
+    "start": "react-router-serve ./build/server/index.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -24,12 +26,8 @@
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.10",
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^4.1.10",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite": "^6.3.3"
   }
 }
