--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "scripts": {
     "build": "react-router build",
     "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
-    "start": "react-router-serve ./build/server/index.js"
+    "start": "react-router-serve ./build/server/index.js",
+    "optimize:images": "node scripts/optimize-images.js",
+    "analyze:bundle": "cross-env ANALYZE=true npm run build",
+    "perf:audit": "node scripts/performance-audit.js",
+    "precommit": "npm run optimize:images"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -20,14 +24,15 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
-    "react-router-dom": "^7.6.2",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.10",
     "cross-env": "^7.0.3",
+    "sharp": "^0.33.5",
     "tailwindcss": "^4.1.10",
-    "vite": "^6.3.3"
+    "vite": "^6.3.3",
+    "vite-bundle-analyzer": "^0.11.1"
   }
 }
