--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
-{
-  "name": "rizal-web",
+{  "name": "rizal-web",
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">=14.0.0"
+    "node": "18.x"
   },
   "scripts": {
     "build": "react-router build",
