--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "type": "module",
   "engines": {
     "node": "18.x"
-  },
-  "scripts": {
+  },  "scripts": {
     "build": "react-router build",
     "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "optimize:images": "node scripts/optimize-images.js",
-    "analyze:bundle": "cross-env ANALYZE=true npm run build",
-    "perf:audit": "node scripts/performance-audit.js",
-    "precommit": "npm run optimize:images"
+    "perf:audit": "node scripts/performance-audit.js"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
