--- a/package.json
+++ b/package.json
@@ -1,33 +1,1 @@
-{  "name": "rizal-web",
-  "private": true,
-  "type": "module",  "engines": {
-    "node": "20.x"
-  },"scripts": {
-    "build": "react-router build",
-    "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "optimize:images": "node scripts/optimize-images.js",
-    "perf:audit": "node scripts/performance-audit.js"
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.2.4",
-    "@heroicons/react": "^2.2.0",
-    "@react-router/node": "^7.5.3",
-    "@react-router/serve": "^7.5.3",
-    "isbot": "^5.1.27",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router": "^7.5.3",
-    "react-type-animation": "^3.2.0"
-  },
-  "devDependencies": {
-    "@react-router/dev": "^7.5.3",
-    "@tailwindcss/vite": "^4.1.10",
-    "cross-env": "^7.0.3",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^4.1.10",
-    "vite": "^6.3.3",
-    "vite-bundle-analyzer": "^0.11.1"
-  }
-}
+{"name":"rizal-web","private":true,"type":"module","engines":{"node":"20.x"},"scripts":{"build":"react-router build","dev":"cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev","start":"react-router-serve ./build/server/index.js","optimize:images":"node scripts/optimize-images.js","perf:audit":"node scripts/performance-audit.js"},"dependencies":{"@headlessui/react":"^2.2.4","@heroicons/react":"^2.2.0","@react-router/node":"^7.5.3","@react-router/serve":"^7.5.3","framer-motion":"^12.18.1","isbot":"^5.1.27","lucide-react":"^0.515.0","react":"^19.1.0","react-dom":"^19.1.0","react-icons":"^5.5.0","react-router":"^7.5.3","react-type-animation":"^3.2.0"},"devDependencies":{"@react-router/dev":"^7.5.3","@tailwindcss/vite":"^4.1.10","cross-env":"^7.0.3","sharp":"^0.33.5","tailwindcss":"^4.1.10","vite":"^6.3.3","vite-bundle-analyzer":"^0.11.1"}}
