--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,25 @@
 {
-  "functions": {
-    "build/server/index.js": {
-      "runtime": "nodejs18.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node@3.0.7",
+      "config": {
+        "includeFiles": ["build/**"]
+      }
     }
-  }
+  ],
+  "routes": [
+    {
+      "src": "/assets/(.*)",
+      "dest": "/build/client/assets/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.js"
+    }
+  ]
 }
