--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "engines": {
     "node": ">=18.0.0"
-  },
-  "scripts": {
+  },  "scripts": {
     "build": "react-router build",
+    "build:vercel": "react-router build --mode=production",
     "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "optimize:images": "node scripts/optimize-images.js",
