--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "react-router build",
     "build:vercel": "react-router build --mode=production",
     "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "react-router-serve ./build/server/server/index.js",
     "optimize:images": "node scripts/optimize-images.js",
     "perf:audit": "node scripts/performance-audit.js"
   },
