--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,10 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
+  "installCommand": "npm install",
   "builds": [
     {
-      "src": "build/server/index.js",
+      "src": "api/index.js",
       "use": "@vercel/node"
     },
     {
@@ -19,8 +21,23 @@
       }
     },
     {
+      "src": "/images/(.*)",
+      "dest": "/build/client/images/$1",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/build/client/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/build/client/manifest.json"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/build/server/index.js"
+      "dest": "/api/index.js"
     }
   ]
 }
