--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "rizal-web",
   "private": true,
-  "type": "module",
-  "engines": {
-    "node": ">=18.0.0"
-  },  "scripts": {
+  "type": "module",  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },"scripts": {
     "build": "react-router build",
     "build:vercel": "react-router build --mode=production",
     "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "react-router-serve ./build/server/server/index.js",
     "optimize:images": "node scripts/optimize-images.js",
     "perf:audit": "node scripts/performance-audit.js"
   },
