--- a/vercel.json
+++ b/vercel.json
@@ -1,43 +1,13 @@
 {
-  "version": 2,
   "buildCommand": "npm run build",
-  "installCommand": "npm install",
-  "builds": [
-    {
-      "src": "api/index.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "build/client/**",
-      "use": "@vercel/static"
-    }
-  ],
+  "outputDirectory": "build/client",
   "routes": [
     {
-      "src": "/assets/(.*)",
-      "dest": "/build/client/assets/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "/build/client/images/$1",
-      "headers": {
-        "Cache-Control": "public, max-age=31536000, immutable"
-      }
-    },
-    {
-      "src": "/favicon.ico",
-      "dest": "/build/client/favicon.ico"
-    },
-    {
-      "src": "/manifest.json",
-      "dest": "/build/client/manifest.json"
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.js"
+      "dest": "/index.html"
     }
   ]
 }
