--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "rizal-web",
   "private": true,
-  "type": "module",  "engines": {
+  "type": "module",
+  "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
-  },"scripts": {
+  },
+  "scripts": {
     "build": "react-router build",
     "build:vercel": "react-router build --mode=production",
     "dev": "cross-env NODE_OPTIONS=--experimental-vm-modules react-router dev",
@@ -24,7 +26,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.3",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
